# scavenger-hunt-game

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TASKS.md  docker-compose.dev.yml  init.sql
.claude/agents/: validation-gates.md
.claude/commands/: fix-github-issue.md  generate-prp.md
docs/: gameplay.md  user-management.md
docs/model/: challenge.md
examples/events/: authentication.md  end_challenge.md  handle_request_errors.md  participant_state.md  ping_location.md  start_challenge.md  waypoint_check-in.md  waypoint_present.md  waypoint_proof.md
migrations/: 001_initial.sql  002_json_challenge_schema.sql
prp/features/: initial.md
prp/plans/: scavenger-hunt-game-server.md
prp/templates/: prp_base.md
src/: config.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/db/: connection.rs  mod.rs
src/handlers/: auth.rs  challenges.rs  health.rs  mod.rs  waypoints.rs
src/models/: audit_log.rs  challenge.rs  mod.rs  user.rs
src/routes/: api.rs  mod.rs
src/services/: auth_service.rs  image_service.rs  location_service.rs  mod.rs
src/utils/: mod.rs  responses.rs  validation.rs
tests/: auth_tests.rs  challenge_tests.rs  waypoint_tests.rs
