[package]
name = "scavenger-hunt-game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tokio", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
dotenv = "0.15"

# HTTP client for external services
reqwest = { version = "0.12", features = ["json"] }

# Geolocation
geo-types = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Input validation
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }